cros: Change AppList corner behavior

1. Change behavior of AppList corners from animating
from round to angular to no longer animating and
disappearing offscreen at the top of the screen.

2. Fixed broken unit tests.

Bug: 874200
Change-Id: I0983794bc58542a790b42bc3fcc17b64cc11e1b5
Reviewed-on: https://chromium-review.googlesource.com/1194862
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Commit-Queue: Daniel Zhang <oxyflush@google.com>
Cr-Commit-Position: refs/heads/master@{#588213}
Former-commit-id: 7d17c61cd40a46d78a8a1a09404d707aafcf74dc